Added placeholder for empty groups

--- a/src/styles/components/_input.scss
+++ b/src/styles/components/_input.scss
@@ -1,5 +1,5 @@
 .text-input {
-  border: 1px solid #cacccd;
+  border: 1px solid $white-gray;
   font-size: $font-size-large;
   font-weight: 300;
   height: 50px;
