--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -10,4 +10,5 @@
 @import './components/list';
 @import './components/loader';
 @import './components/page-header';
+@import './components/placeholder';
 @import './components/visibility';
